--- a/templates/login.html
+++ b/templates/login.html
@@ -1,69 +1,31 @@
 {% extends "base.html" %}
-
-{% block title %}
-Home
-{% endblock %}
-
 {% block content %}
-
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Recipe Recommendation app | Login</title>
-	<link rel='stylesheet' href="{{ url_for('static', filename='login.css')}}">
+	<title>Login</title>
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='login.css') }}">
 </head>
-
 <body>
-	<div class='navigation'>
-		<div class="container flex">
-			<h1 class='logo'>Recipe recommendation</h1>
-			<nav>
-				<ul>
-					<li><a href='/dashboard'>Dashboard</a></li>
-					<li><a href='/signup'>Sign Up</a></li>
-				</ul>
-			</nav>
+	<div class="container">
+		<div class="form-container">
+			<h2>Login</h2>
+			<form>
+				<label for="email">Email</label>
+				<input type="email" id="email" name="email" placeholder="Enter your email">
+
+				<label for="password">Password</label>
+				<input type="password" id="password" name="password" placeholder="Enter your password">
+
+				<button type="submit">Login</button>
+			</form>
+			<p>Don't have an account? <a href="{{ url_for('signup') }}">Sign up</a></p>
+		</div>
+		<div class="image-container">
+			<img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80">
 		</div>
 	</div>
-
-	<section class='banner'>
-		<div class='container grid'>
-			<div class="banner-text">
-				<h1>How are you today?</h1>
-				<p>Let's find out what to cook today</p>
-			</div>
-			<div class='login-form card'>
-				<h2 class='login-text'>Login</h2>
-				{% with messages = get_flashed_messages(with_categories=true) %}
-				{% if messages %}
-				<ul class=flashes>
-					{% for category, message in messages %}
-					<li class="{{ category }}">{{ message }}</li>
-					{% endfor %}
-				</ul>
-				{% endif %}
-				{% endwith %}
-				<form method='POST' action=''>
-					{{form.hidden_tag()}}
-					<div class='form-control'>
-						{{form.username}}
-					</div>
-					<div class='form-control'>
-						{{form.password}}
-					</div>
-					<div class='form-control'>
-						<input type='submit' value='Log in' class='btn btn-primary'>
-					</div>
-					<div class='form-control sign-up'>
-						<a href='/signup'>Don't have an account yet? Sign Up.</a>
-					</div>
-				</form>
-		</div>
-	</section>
 </body>
 </html>
- 
 {% endblock %}
+
