--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='login.css') }}">
 </head>
 <body>
-	<div class="container">
+	<div class="form-container">
 		<div class="form-container">
 			<h2>Login</h2>
 			<form>
