--- a/static/login.css
+++ b/static/login.css
@@ -1,81 +1,81 @@
-/* Center the form in the middle of the screen */
-.form-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    height: 100vh;
+}
+
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #333;
+    color: #fff;
+    width: 100%;
+    height: 50px;
+    padding: 10px 20px;
+}
+
+.navbar a {
+    color: #fff;
+    text-decoration: none;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    padding: 20px;
     width: 50%;
-    max-width: 500px;
-    padding: 40px;
-    box-sizing: border-box;
-    border-radius: 10px;
-    background-color: #f2f2f2;
-    box-shadow: 0px 0px 10px #888888;
 }
 
-/* Style the form header */
-.form-header {
-    margin-bottom: 20px;
-    text-align: center;
-}
-
-.form-header h2 {
-    font-weight: bold;
-    font-size: 2em;
+form label {
+    display: block;
     margin-bottom: 10px;
 }
 
-/* Style the input fields */
-.form-input {
+form input {
     width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
+    padding: 10px;
+    margin-bottom: 20px;
     border: none;
-    border-radius: 4px;
-    background-color: white;
+    border-bottom: 1px solid #333;
 }
 
-.form-input:focus {
-    outline: none;
-    box-shadow: 0px 0px 5px #888888;
-}
-
-/* Style the submit button */
-.form-submit {
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
+form button {
+    background-color: #333;
+    color: #fff;
     border: none;
-    border-radius: 4px;
+    padding: 10px;
+    width: 100%;
     cursor: pointer;
-    width: 100%;
-    font-size: 1.2em;
 }
 
-.form-submit:hover {
-    background-color: #45a049;
+form button:hover {
+    opacity: 0.8;
 }
 
-/* Style the sign up link */
-.form-signup {
+.signup {
+    margin-top: 20px;
+    font-size: 14px;
     text-align: center;
 }
 
-.form-signup a {
-    color: #4CAF50;
+.signup a {
+    color: #333;
 }
 
-.form-signup a:hover {
-    text-decoration: underline;
-}
-
-/* Style the image */
-.login-image {
+.image {
+    width: 50%;
     height: 100vh;
-    background-image: url("https://images.unsplash.com/photo-1546069901-ba9599a7e63c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80");
-    background-size: cover;
-    background-position: center;
+    background-image: url('https://images.unsplash.com/photo-1546069901-ba9599a7e63c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80');
     background-repeat: no-repeat;
+    background-size: cover;
 }
