--- a/static/signup.css
+++ b/static/signup.css
@@ -12,7 +12,7 @@ body {
     height: 100vh;
 }
 
-.login-form {
+.signup-form {
     background-color: #ffffff;
     padding: 30px;
     border-radius: 5px;
