--- a/static/login.css
+++ b/static/login.css
@@ -1,56 +1,66 @@
-body {
-    margin: 0;
-    padding: 0;
-    background-color: #f5f5f5;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    margin-top: 60px;
 }
 
 .login-form {
-    background-color: #ffffff;
+    background-color: #f9f9f9;
     padding: 30px;
     border-radius: 5px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 5px 20px rgba(0, 0, 0, .1);
 }
 
-.input-container {
+.login-form h2 {
+    text-align: center;
+    margin-bottom: 30px;
+    font-weight: bold;
+    color: #333;
+}
+
+.login-form .form-group {
+    position: relative;
     margin-bottom: 20px;
 }
 
-.input-container label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
+.login-form label {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 10px;
+    font-size: 20px;
+    color: #888;
 }
 
-.input-container input[type="text"],
-.input-container input[type="password"] {
-    width: 100%;
-    padding: 10px;
+.login-form input {
+    padding-left: 40px;
+    font-size: 20px;
     border-radius: 5px;
     border: none;
-    background-color: #f0f0f0;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .1);
+}
+
+.login-form button {
+    margin-top: 20px;
+    width: 100%;
+    border-radius: 5px;
+}
+
+.signup-link {
+    margin-top: 20px;
+    text-align: center;
     font-size: 16px;
 }
 
-.input-container input[type="submit"] {
-    width: 100%;
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-    background-color: #008000;
-    color: #fff;
-    font-size: 16px;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
+.signup-link a {
+    color: #007bff;
 }
 
-.input-container input[type="submit"]:hover {
-    background-color: #006400;
+.login-image {
+    background-color: #007bff;
+    padding: 0;
+}
+
+.login-image img {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
 }
