--- a/templates/login.html
+++ b/templates/login.html
@@ -1,41 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="login.css">
-</head>
-<body>
-    <div class="container">
-        <div class="image">
-            <img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1480&amp;q=80" alt="background">
+{% extends 'base.html' %}
+
+{% block content %}
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <form class="login-form">
+        <h2>Login</h2>
+        <div class="form-group">
+          <label for="username"><i class="fas fa-user"></i></label>
+          <input type="text" class="form-control" id="username" placeholder="Username">
         </div>
-        <div class="form-container">
-            <h1>Login</h1>
-            <form action="#" method="POST">
-                <div class="input-container">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" name="username" required>
-                </div>
-                <div class="input-container">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="input-container">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <div class="input-container">
-                    <label for="confirm-password">Confirm Password</label>
-                    <input type="password" id="confirm-password" name="confirm-password" required>
-                </div>
-                <div class="input-container">
-                    <button type="submit">Sign Up</button>
-                </div>
-            </form>
-            <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+        <div class="form-group">
+          <label for="password"><i class="fas fa-lock"></i></label>
+          <input type="password" class="form-control" id="password" placeholder="Password">
         </div>
+        <button type="submit" class="btn btn-primary">Login</button>
+      </form>
+      <div class="signup-link">
+        Don't have an account? <a href="{% url 'signup' %}">Sign up</a>
+      </div>
     </div>
-</body>
-</html>
+    <div class="col-md-6 login-image">
+      <img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="Login Image">
+    </div>
+  </div>
+</div>
+{% endblock %}
