--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,45 +1,28 @@
-{% extends "base.html" %}
-{% block content %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
-    <link rel="stylesheet" href="signup.css">
-</head>
-<body>
-    <div class="container">
-        <div class="image">
-            <img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1480&amp;q=80" alt="background">
-        </div>
-        <div class="form-container">
-            <h1>Sign Up</h1>
-            <form action="#" method="POST">
-                <div class="input-container">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" name="username" required>
-                </div>
-                <div class="input-container">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="input-container">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <div class="input-container">
-                    <label for="confirm-password">Confirm Password</label>
-                    <input type="password" id="confirm-password" name="confirm-password" required>
-                </div>
-                <div class="input-container">
-                    <button type="submit">Sign Up</button>
-                </div>
-            </form>
-            <p>Already have an account? <a href="login.html">Login</a></p>
-        </div>
-    </div>
-</body>
-</html>
+{% extends 'base.html' %}
 
+{% block content %}
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <form class="login-form">
+        <h2>Sign Up</h2>
+        <div class="form-group">
+          <label for="username"><i class="fas fa-user"></i></label>
+          <input type="text" class="form-control" id="username" placeholder="Username">
+        </div>
+        <div class="form-group">
+          <label for="password"><i class="fas fa-lock"></i></label>
+          <input type="password" class="form-control" id="password" placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-primary">Sign Up</button>
+      </form>
+      <div class="signup-link">
+       Already have an account? <a href="{% url 'login' %}">Login</a>
+      </div>
+    </div>
+    <div class="col-md-6 login-image">
+      <img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="Login Image">
+    </div>
+  </div>
+</div>
 {% endblock %}
