--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<head>
+    <meta charset="UTF-8">
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <link rel='stylesheet' href="{{ url_for('static', filename='login.css')}}">
+</head>
 <div class="container">
   <div class="row">
     <div class="col-md-6">
