--- a/static/login.css
+++ b/static/login.css
@@ -1,66 +1,81 @@
-.container {
-    margin-top: 60px;
-}
-
-.login-form {
-    background-color: #f9f9f9;
-    padding: 30px;
-    border-radius: 5px;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, .1);
-}
-
-.login-form h2 {
-    text-align: center;
-    margin-bottom: 30px;
-    font-weight: bold;
-    color: #333;
-}
-
-.login-form .form-group {
-    position: relative;
-    margin-bottom: 20px;
-}
-
-.login-form label {
+/* Center the form in the middle of the screen */
+.form-container {
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
-    left: 10px;
-    font-size: 20px;
-    color: #888;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    max-width: 500px;
+    padding: 40px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    background-color: #f2f2f2;
+    box-shadow: 0px 0px 10px #888888;
 }
 
-.login-form input {
-    padding-left: 40px;
-    font-size: 20px;
-    border-radius: 5px;
-    border: none;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, .1);
-}
-
-.login-form button {
-    margin-top: 20px;
-    width: 100%;
-    border-radius: 5px;
-}
-
-.signup-link {
-    margin-top: 20px;
+/* Style the form header */
+.form-header {
+    margin-bottom: 20px;
     text-align: center;
-    font-size: 16px;
 }
 
-.signup-link a {
-    color: #007bff;
+.form-header h2 {
+    font-weight: bold;
+    font-size: 2em;
+    margin-bottom: 10px;
 }
 
-.login-image {
-    background-color: #007bff;
-    padding: 0;
-}
-
-.login-image img {
+/* Style the input fields */
+.form-input {
     width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: none;
+    border-radius: 4px;
+    background-color: white;
+}
+
+.form-input:focus {
+    outline: none;
+    box-shadow: 0px 0px 5px #888888;
+}
+
+/* Style the submit button */
+.form-submit {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+    font-size: 1.2em;
+}
+
+.form-submit:hover {
+    background-color: #45a049;
+}
+
+/* Style the sign up link */
+.form-signup {
+    text-align: center;
+}
+
+.form-signup a {
+    color: #4CAF50;
+}
+
+.form-signup a:hover {
+    text-decoration: underline;
+}
+
+/* Style the image */
+.login-image {
     height: 100vh;
-    object-fit: cover;
+    background-image: url("https://images.unsplash.com/photo-1546069901-ba9599a7e63c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
