--- a/templates/login.html
+++ b/templates/login.html
@@ -1,33 +1,30 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<head>
-    <meta charset="UTF-8">
-	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	  <link rel='stylesheet' href="{{ url_for('static', filename='login.css')}}">
-</head>
-<div class="container">
-  <div class="row">
-    <div class="col-md-6">
-      <form class="login-form">
-        <h2>Login</h2>
-        <div class="form-group">
-          <label for="username"><i class="fas fa-user"></i></label>
-          <input type="text" class="form-control" id="username" placeholder="Username">
-        </div>
-        <div class="form-group">
-          <label for="password"><i class="fas fa-lock"></i></label>
-          <input type="password" class="form-control" id="password" placeholder="Password">
-        </div>
-        <button type="submit" class="btn btn-primary">Login</button>
-      </form>
-      <div class="signup-link">
-        Don't have an account? <a href="{% url 'signup' %}">Sign up</a>
-      </div>
-    </div>
-    <div class="col-md-6 login-image">
-      <img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="Login Image">
-    </div>
-  </div>
-</div>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Login</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">
+    </head>
+    <body>
+        <div class="form-container">
+            <div class="form-header">
+                <h2>Login</h2>
+            </div>
+            <form action="{{ url_for('login') }}" method="POST">
+                <label for="email"><b>Email</b></label>
+                <input type="text" placeholder="Enter Email" name="email" class="form-input" required>
+
+                <label for="password"><b>Password</b></label>
+                <input type="password" placeholder="Enter Password" name="password" class="form-input" required>
+
+                <button type="submit" class="form-submit">Login</button>
+            </form>
+            <div class="form-signup">
+                <p>Don't have an account? <a href="{{ url_for('signup') }}">Sign up</a></p
+				</div>
+			</div>
+		</body>	
+	</html>	
 {% endblock %}
