--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,37 +1,46 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<!DOCTYPE html>
-<html>
 <head>
-	<title>Sign Up</title>
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='login.css') }}">
+    <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign Up</title>
+    <link rel='stylesheet' href="{{ url_for('static', filename='login.css')}}">
 </head>
-<body>
-	<div class="container">
-		<div class="form-container">
+	<div class='container'>
+		<div class='form-container'>
 			<h2>Sign Up</h2>
-			<form>
-				<label for="name">Name</label>
-				<input type="text" id="name" name="name" placeholder="Enter your name">
-
-				<label for="email">Email</label>
-				<input type="email" id="email" name="email" placeholder="Enter your email">
-
-				<label for="password">Password</label>
-				<input type="password" id="password" name="password" placeholder="Enter your password">
-
-				<label for="confirm-password">Confirm Password</label>
-				<input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm your password">
-
-				<button type="submit">Sign Up</button>
-			</form>
-			<p>Already have an account? <a href="{{ url_for('login') }}">Login</a></p>
+				{% with messages = get_flashed_messages(with_categories=true) %}
+				{% if messages %}
+				<ul class=flashes>
+					{% for category, message in messages %}
+					<li class="{{ category }}">{{ message }}</li>
+					{% endfor %}
+				</ul>
+				{% endif %}
+				{% endwith %}
+				<form method='POST' action=''>
+					{{form.hidden_tag()}}
+					<div>
+						{{form.username}}
+					</div>
+					<div>
+						{{form.email}}
+					</div>
+					<div>
+						{{form.password}}
+					</div>
+					<div>
+						<input type='submit' value='Sign Up'>
+					</div>
+					<p>Already have an account? <a href="{{ url_for('login') }}">Login</a></p>
+				</form>
 		</div>
 		<div class="image-container">
-			<img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80">
-		</div>
+	<img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80">
+  </div>
 	</div>
-</body>
-</html>
 {% endblock %}
+
+
+
