--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
         <ul class="navbar-nav">
             {% if current_user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+            <a class="nav-link" href="{{ url_for('homepage') }}">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('index') }}"> Get Recommendation</a>
