--- a/static/recipe_detail.css
+++ b/static/recipe_detail.css
@@ -37,7 +37,7 @@ ol {
     top: 0;
     left: 0;
     margin: 10px;
-    border: 5px solid #a6a4a4;
+    border: 1px solid #ddd;
     border-radius: 5px;
 }
 
