--- a/templates/recommendation.html
+++ b/templates/recommendation.html
@@ -5,9 +5,6 @@ Home
 {% endblock %}
 
 {% block content %}
-
-<!DOCTYPE html>
-<html>
   <head>
     <title>Recommended Recipes</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -34,36 +31,28 @@ Home
         <p>No recipes found.</p>
       {% endif %}
     </div>
-  </body>
-</html>
-<!--
-  <body>
-    <h1>Recommended Recipes</h1>
 
-    {% if recipes %} {% for recipe in recipes %}
-    <h2>{{ recipe.name }}</h2>
-    <img src="{{ recipe.image }}" alt="{{ recipe.name }}" width="200" />
-    <p>Cuisine: {{ recipe.cuisine }}</p>
-    <p>Cooking Time: {{ recipe.time }} minutes</p>
-    <p>Servings: {{ recipe.servings }}</p>
-    <p>Diet: {{ recipe.diet }}</p>
-    <p>Ingredients:</p>
-    <ul>
-      {% for ingredient in recipe.ingredients.split(',') %}
-      <li>{{ ingredient }}</li>
-      {% endfor %}
-    </ul>
-    <p>Instructions:</p>
-    <ol>
-      {% for instruction in recipe.instructions.split(',') %}
-      <li>{{ instruction }}</li>
-      {% endfor %}
-    </ol>
-
-    {% endfor %} {% else %}
-    <p>No recipes found.</p>
-    {% endif %}
+    <div class="container">
+    <h2>You May Like</h2>
+    <br><br>
+        {% if similar_recipes %}
+          <div class="row">
+            {% for similar_recipe in similar_recipes %}
+              <div class="col-sm-4 mb-4">
+                <div class="card">
+                  <img class="card-img-top" src="{{ similar_recipe.image }}" alt="{{ similar_recipe.name }}">
+                  <div class="card-body">
+                    <h5 class="card-title">{{ similar_recipe.name }}</h5>
+                    <p class="card-text">{{ similar_recipe.cuisine }}</p>
+                    <a href="{{ url_for('recipe_detail', recipe_id=similar_recipe.key) }}" class="btn btn-primary">View Recipe</a>
+                  </div>
+                </div>
+              </div>
+            {% endfor %}
+          </div>
+        {% else %}
+        <p>Thank you for visiting our website! We hope to find similar recipes in the future.</p>
+        {% endif %}
+    </div>
   </body>
-</html>
--->
 {% endblock %}
