--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,18 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ml-auto">
             {% if current_user.is_authenticated %}
+            <li class="nav-item">
+                <form class="form-inline my-2 my-lg-0" action="{{ url_for('search') }}" method="POST">
+                  <div class='input-group'>
+                    <input class="form-control mr-sm-2" type="text" name="search_term" placeholder="Search">
+                  <div class="input-group-append">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                  </div>
+                  </div>
+             </form>
+            </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('homepage') }}">Browse</a>
           </li>
@@ -26,16 +36,7 @@
                 <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
             </li>
           <br><br>
-          <li class="nav-item">
-                <form class="form-inline my-2 my-lg-0" action="{{ url_for('search') }}" method="POST">
-                  <div class='input-group'>
-                    <input class="form-control mr-sm-2" type="text" name="search_term" placeholder="Search">
-                  <div class="input-group-append">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                  </div>
-                  </div>
-             </form>
-            </li>
+          
           {% else %}
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('login') }}">Login</a>
