--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" integrity="sha384-...">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-...">
   <link rel='stylesheet' href="{{ url_for('static', filename='root.css')}}">
 </head>
 <body>
@@ -14,14 +14,14 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav">
             {% if current_user.is_authenticated %}
             <li class="nav-item">
                 <form class="form-inline my-2 my-lg-0" action="{{ url_for('search') }}" method="POST">
                   <div class='input-group'>
                     <input class="form-control mr-sm-2" type="text" name="search_term" placeholder="Search">
                   <div class="input-group-append">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" color='blue'>Search</button>
                   </div>
                   </div>
              </form>
@@ -45,8 +45,6 @@
                 <a class="nav-link" href="{{ url_for('signup') }}">Sign Up</a>
             </li>
             {% endif %}
-            
-
         </ul>
       </div>
     </div>
@@ -55,6 +53,6 @@
     {% block content %}
     {% endblock %}
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-..."></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-..."></script>
 </body>
 </html>
